<resources>
    <string name="app_name">GithubUser</string>
    <string name="search">Search</string>
    <string name="Username">Username </string>
    <string name="company">Company</string>
    <string name="type_user">Type</string>
    <string name="user_name">Name</string>
    <string name="followers">Followers</string>
    <string name="title_actionbar_detail">User Detail</string>
    <string name="title_actionbar_setting">Setting</string>
    <string name="_20">20</string>
    <string name="change_language_setting">Change Language Setting</string>
    <string name="following">Following</string>
    <string name="location">Location</string>
    <string name="tab_title_1">Followers</string>
    <string name="tab_title_2">Following</string>
    <string name="favorite">Favorite</string>
    <string name="list_favorites">Favorites</string>
    <string name="data_favorite">Favorite is Empty</string>
    <string name="label_reminder">Reminder at 9.00 AM</string>
    <string name="key_reminder">Reminder</string>
    <string name="key_language">language</string>
    <string name="set_language">English</string>
    <string name="toast_reminder_activated">Reminder is Activated</string>
    <string name="toast_reminder_canceled">Reminder Canceled</string>
    <string name="notification_title">Reminder</string>
    <string name="notification_message">Let\'s find popular user on Github!</string>
    <string name="appwidget_text">LIST FAVORITE</string>
    <string name="no_data">NO DATA</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>